# JWT-Token-fast-api

./: .env-example  README.md  docker-compose.yaml  pyproject.toml
alembic/: env.py
alembic/versions/: 2024_04_23_1743-d3b9ad26010c_.py  2024_05_02_2011-3930a3eebbb7_.py
src/: __init__.py  config.py  database.py  main.py
src/admin/: authentication.py  panel.py
src/users/: models.py  repository.py  router.py  schemas.py
