[tool.poetry]
name = "jwt-token-fast-api"
version = "0.1.0"
description = ""
authors = ["Tok736 <to_ev@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.110.2"
alembic = "^1.13.1"
sqlalchemy = "^2.0.29"
pydantic-settings = "^2.2.1"
uvicorn = "^0.29.0"
asyncpg = "^0.29.0"
sqladmin = "^0.16.1"
itsdangerous = "^2.2.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
